# arrow-experimental-rs-parquet2

./: .asf.yaml  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
dev/release/: verify-release-candidate.sh
integration/: write_pyarrow.py
parquet/: Cargo.toml
parquet-tools/: Cargo.toml  README.md
parquet-tools/src/: cli.yaml  main.rs
parquet-tools/src/lib/: dump.rs  lib.rs  meta.rs  rows.rs
src/: error.rs  lib.rs  types.rs
src/encoding/: bitpacking.rs  mod.rs  uleb128.rs  zigzag_leb128.rs
src/encoding/delta_bitpacked/: decoder.rs
src/encoding/delta_byte_array/: decoder.rs
src/encoding/delta_length_byte_array/: decoder.rs  mod.rs
src/encoding/hybrid_rle/: bitmap.rs  decoder.rs  encoder.rs  mod.rs
src/encoding/plain_byte_array/: decoder.rs
src/metadata/: column_chunk_metadata.rs  column_descriptor.rs  column_order.rs  file_metadata.rs  mod.rs  row_metadata.rs  schema_descriptor.rs  sort.rs
src/read/: compression.rs  mod.rs  page.rs  page_iterator.rs
src/read/page_dict/: binary.rs  fixed_len_binary.rs  mod.rs  primitive.rs
src/schema/: mod.rs
src/schema/io_message/: mod.rs
src/schema/io_thrift/: from_thrift.rs  mod.rs  to_thrift.rs
src/schema/types/: basic_type.rs  converted_type.rs  logical_to_converted.rs  mod.rs  parquet_type.rs  physical_type.rs  spec.rs
src/serialization/: mod.rs
src/serialization/read/: binary.rs  boolean.rs  levels.rs  mod.rs  primitive.rs  primitive_nested.rs  record_batch.rs  utils.rs
src/statistics/: binary.rs  boolean.rs  fixed_len_binary.rs  mod.rs  primitive.rs
src/write/: column_chunk.rs  compression.rs  dyn_iter.rs  file.rs  mod.rs  page.rs  row_group.rs  statistics.rs  stream.rs
(+2 files in other folders)
