# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "parquet2"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Jorge C. Leitao <jorgecarleitao@gmail.com", "Apache Arrow <dev@arrow.apache.org>"]
readme = "README.md"
edition = "2018"

[lib]
name = "parquet2"
bench = false

[dependencies]
parquet-format = "~2.6.1"
thrift = "0.13"
bitpacking = { version = "0.8.2", features = ["bitpacker1x"] }
streaming-iterator = "0.1.5"

futures = { version = "0.3", optional = true }

snap = { version = "^1.0", optional = true }
brotli = { version = "^3.3", optional = true }
flate2 = { version = "^1.0", optional = true }
lz4 = { version = "^1.23", optional = true }
zstd = { version = "^0.6", optional = true }

[features]
default = ["snappy", "gzip", "lz4", "zstd", "brotli", "stream"]
snappy = ["snap"]
gzip = ["flate2"]
stream = ["futures"]
